--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
 
         <audio id="cabana">
-                <source src="assets/sound/copes_cabana_theme.wav" type="audio/mpeg">
+                <source src="assets/sound/copes_cabana_theme.wav" type="audio/wav">
         </audio>
 
         <audio id="cranium">
-            <source src="assets/sound/cranium.wav" type="audio/mpeg">
+            <source src="assets/sound/cranium.wav" type="audio/wav">
         </audio>
 
         <audio id="yoi-club">
-                <source src="assets/sound/yoiclub.wav" type="audio/mpeg">
+                <source src="assets/sound/yoiclub.wav" type="audio/wav">
         </audio>
 
         <audio id="double-yoi">
-                <source src="assets/sound/double_yoi.wav" type="audio/mpeg">
+                <source src="assets/sound/double_yoi.wav" type="audio/wav">
         </audio>
 
         <script type="text/javascript" src="assets/javascript/app.js"></script>
